--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 <div id="Kontakt">
          <p>&Uuml;bungen Sprachsynthese und -erkennung SoSe 2019
          <br><br>Gruppe: Gruppenname
-         <br><br>Muster Mustermann (11111111); Peter Petersmann (22222222); Franz Franzmann (33333333)</p>
+         <br><br>Muster Mustermann (11111111); Peter Petersmann (22222222); Stefan Jessel (897032)</p>
          <hr color=#444444 size="2">
 </div>
 
