renaming mark to marc

--- a/ue1.html
+++ b/ue1.html
@@ -22,7 +22,7 @@
 <br><h3>Aufgabe 1 - 1.1</h3>
 
 <br><p>Musikaufnahme</p>
-<audio controls><source src="./audio/musik_mono.wav" type="audio/wav"></audio>
+<audio controls><source src="./wav/David_A.wav" type="audio/wav"></audio>
 <p>Beschreibung</p>
 <p>L&ouml;sung</p>
 
@@ -31,10 +31,37 @@
 
 <br><h3>Aufgabe 2 - 2.1</h3>
 <br><p>Rauschen</p>
-<audio controls><source src="./audio/rauschen.wav" type="audio/wav"></audio>
+<audio controls><source src="./wav/David_I.wav" type="audio/wav"></audio>
 <p>Beschreibung</p>
 <p>L&ouml;sung</p>
 
+<br><p>Musikaufnahme</p>
+<audio controls><source src="./wav/Marc_A.wav" type="audio/wav"></audio>
+<p>Beschreibung</p>
+<p>L&ouml;sung</p>
+
+<br><h3>Aufgabe 1 - 1.2</h3>
+<p>L&ouml;sung</p>
+
+<br><h3>Aufgabe 2 - 2.1</h3>
+<br><p>Rauschen</p>
+<audio controls><source src="./wav/Marc_I.wav" type="audio/wav"></audio>
+<p>Beschreibung</p>
+<p>L&ouml;sung</p>
+
+<br><p>Musikaufnahme</p>
+<audio controls><source src="./wav/Stefan_A.wav" type="audio/wav"></audio>
+<p>Beschreibung</p>
+<p>L&ouml;sung</p>
+
+<br><h3>Aufgabe 1 - 1.2</h3>
+<p>L&ouml;sung</p>
+
+<br><h3>Aufgabe 2 - 2.1</h3>
+<br><p>Rauschen</p>
+<audio controls><source src="./wav/Stefan_I.wav" type="audio/wav"></audio>
+<p>Beschreibung</p>
+<p>L&ouml;sung</p>
 <br><h3>Aufgabe 2 - 2.2</h3>
 <p>L&ouml;sung</p>
 
