--- a/home.html
+++ b/home.html
@@ -14,9 +14,9 @@
 <body>
 
 <div id="Kontakt">
-         <p>&Uuml;bungen Sprachsynthese und -erkennung SoSe 2019
-         <br><br>Gruppe: Gruppenname
-         <br><br>Muster Mustermann (11111111); Peter Petersmann (22222222); Stefan Jessel (897032)</p>
+         <p>&Uuml;bungen Sprachsynthese und -erkennung SoSe 2022
+         <br><br>Gruppe: Die Gruppe die mir persönlich am besten gefällt
+         <br><br>David Eichhorn (911165); Marc Ubbelohde (897464); Stefan Jessel (897032)</p>
          <hr color=#444444 size="2">
 </div>
 
