trimmed wav files

--- a/ue1.html
+++ b/ue1.html
@@ -3,11 +3,11 @@
 <title></title>
 <link rel="stylesheet" type="text/css" href="format.css">
 <style type="text/css">
-        <!--
+        
                  a:link {font-family:Arial;        font-size:10pt;        text-decoration:none;}
                 a:visited {font-family:Arial; font-size:10pt; text-decoration:none;}
                 a:hover {color:#FF3333; text-decoration:none; font-weight:normal; font-size:10pt;}
-        //-->
+        
 </style>
 </head>
 
@@ -19,18 +19,31 @@
 </iframe>
 
 <h2>&Uuml;bung 1</h2>
-<br><h3>Aufgabe 1 - 1.1</h3>
+<article>
+        <header>
+                <h3>Aufgabe 1 - 1.1</h3>
+        </header>
+        <section>
+               <p>In dieser Übung geht es um die Fouriersynthese und -analyse. Erzeuge mit Matlab/Octave ein
+                Sinusgemisch mit den folgenden Eigenschaften (f: Frequenz, A: Amplitude, phi Phasenwinkel):</p> 
+                <ul>
+                        <li>f1=500Hz A1=1 phi1=0</li>
+                        <li>f2=1000Hz A2=0,5 phi2=-pi/2</li>
+                        <li>f3=2000Hz A3=0,25 phi3=pi</li>
+                </ul>
+                <p>und einer Dauer von 5 s. Zeichne das Sinusgemisch mit plot im Bereich t=0-20ms. Dabei soll auf
+                        der x-Achse die Zeit in ms abgetragen sein. Gibt die Schwingung als Wave-Datei mit wavwrite
+                        aus, und zwar mit einer Abtastfrequenz fa von 16kHz und einer Auflösung von 16bit. Dabei
+                        skalieren, um Clipping zu vermeiden.</p>
+        </section>
+</article>
+<br>
 
 <br><p>Musikaufnahme</p>
 <audio controls><source src="./wav/David_A.wav" type="audio/wav"></audio>
 <p>Beschreibung</p>
 <p>L&ouml;sung</p>
 
-<br><h3>Aufgabe 1 - 1.2</h3>
-<p>L&ouml;sung</p>
-
-<br><h3>Aufgabe 2 - 2.1</h3>
-<br><p>Rauschen</p>
 <audio controls><source src="./wav/David_I.wav" type="audio/wav"></audio>
 <p>Beschreibung</p>
 <p>L&ouml;sung</p>
@@ -65,6 +78,11 @@
 <br><h3>Aufgabe 2 - 2.2</h3>
 <p>L&ouml;sung</p>
 
+<br><h3>Aufgabe 1 - 1.2</h3>
+<p>L&ouml;sung</p>
+
+<br><h3>Aufgabe 2 - 2.1</h3>
+<br><p>Rauschen</p>
 <br><h3>Aufgabe 2 - 2.3</h3>
 <p>L&ouml;sung</p>
 
