--- a/ue1.html
+++ b/ue1.html
@@ -190,14 +190,14 @@
                 </tr>
             </table>
             <p>Wie unterscheiden sich die Vokale in ihrem Spektrum vom Sinusgemisch und wie unterscheiden sie sich voneinander?</p>
-            <p>Die Spektren der Vokale unterscheiden sich vom Sinusgemisch, dadurch, dass die Vokale wesentlich mehr Frequenzen enthalten. A und I haben unterschiedliche Frequenzen die start ausgeprägt sind. A hat die meiste Energie zwischen ~500-1000Hz,
-                I hat die meiste Energie zwischen 200-400Hz gefolgt von einem Ausschlag bei 2000Hz und 3000Hz. Generelle unterschiede der Aufnahmen kommen vermutlich von der Verwendung unterschiedlicher Mikrofone und Aufnahmeumgebunen sowie unterschiedlicher
+            <p>Die Spektren der Vokale unterscheiden sich vom Sinusgemisch dadurch, dass die Vokale wesentlich mehr Frequenzen enthalten. A und I haben unterschiedliche Frequenzen die start ausgeprägt sind. A hat die meiste Energie zwischen ~500-1000Hz,
+                I hat die meiste Energie zwischen 200-400Hz gefolgt von einem Ausschlag bei 2000Hz und 3000Hz. Generelle Unterschiede der Aufnahmen kommen vermutlich von der Verwendung unterschiedlicher Mikrofone und Aufnahmeumgebunen sowie unterschiedlicher
                 Stimmen. In der Aufnahme von David wurde das A sehr kurz ausgesprochen und hat kaum einen Ausschlag bei 2500Hz und 3300Hz. Marc hat das A mehr gestreckt und wir sehen einen Ausschlag bei 2500Hz und bei 3300Hz. Stefan hat das A weniger
                 gesteckt und der Ausschlag bei 2500Hz und 3300Hz ist weniger ausgeprägt.
             </p>
             <p>Stefan das I sehr gestreckt und wir haben wieder im Selben Frequenzbereich Ausschläge David hat das I wieder weniger lang ausgesprochen und einen geringeren Ausschlag im Frequenzbereich.
             </p>
-            <p>Unsere These ist, dass wenn man einen Vokal beim aussprechen Streckt indem man in ein "H" übergeht, weshalb wir bei den gestreckten Vokalen Ausschläge von 2500Hz und 3300Hz sieht. </p>
+            <p>Unsere These ist, dass wenn man einen Vokal beim aussprechen streckt indem man in ein "H" übergeht, weshalb wir bei den gestreckten Vokalen Ausschläge von 2500Hz und 3300Hz sieht. </p>
             <p>Wir haben versucht den "H" Lauf aufzunehmen und zu analysieren ob das der Fall ist. Wir konnten diese These aber nicht bestätigen.</p>
             <table>
                 <tr>
