added names in the proper file now

--- a/oben.html
+++ b/oben.html
@@ -1,18 +1,28 @@
 <html>
+
 <head>
-<title></title>
-        <link rel="stylesheet" type="text/css" href="format.css">
-        <style type="text/css">
-                <!--         p {text-align:left}
-                                h3 {border-bottom:4px double white; padding-bottom:4px; margin:0px;}  //-->
-        </style>
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="format.css">
+    <style type="text/css">
+        p {
+            text-align: left
+        }
+        
+        h3 {
+            border-bottom: 4px double white;
+            padding-bottom: 4px;
+            margin: 0px;
+        }
+    </style>
 
 </head>
+
 <body>
 
-<p>&Uuml;bungen Sprachsynthese und -erkennung SoSe 2019
-<br><br>Gruppe: Gruppenname
-<br>Muster Mustermann (11111111); Peter Petersmann (22222222); Franz Franzmann (33333333)</p>
-<hr color="#444444" size="2">
+    <p>&Uuml;bungen Sprachsynthese und -erkennung SoSe 2022
+        <br><br>Gruppe: Die Gruppe die mir persönlich am besten gefällt
+        <br><br>David Eichhorn (911165); Marc Ubbelohde (897464); Stefan Jessel (897032)</p>
+    <hr color="#444444" size="2">
 </body>
+
 </html>
