--- a/ue1.html
+++ b/ue1.html
@@ -62,6 +62,19 @@
                 auf? Wie kann man sich diesen Unterschied erklären?</p>
         </header>
         <section>
+            <p>Die Frequenzauflösung delta_f berechnet sich aus der Abtastfrequenz f_a geteilt durch den Wert N.</p>
+            <p>N wird gebildet durch die gewünschte Framelänge multipliziert mit der Abtastrate.</p>
+            <p>Die Abtastrate ist in unserer Aufgabe 16 kHz. Daraus folgen nachfolgende Werte für delta_f:</p>
+            <ul>
+                <li>Framelänge: 50 ms N: 800000 delta_f: 0.0200</li>
+                <li>Framelänge: 100 ms N: 1600000 delta_f: 0.0100</li>
+                <li>Framelänge: 500 ms N: 8000000 delta_f: 0.0020</li>
+                <li>Framelänge: 1000 ms N: 16000000 delta_f: 0.0010</li>
+                <li>Framelänge: 5000 ms N: 80000000 delta_f: 0.0002</li>
+            </ul>
+            <p>Somit erkennt man eindeutig, je größer die Framelänge gewählt wird, also je größer der Wert für N wird, desto kleiner wird delta_f und desto feiner wird die fft-Funktion.</p>
+            
+
             <td><img src="./matlab/01-uebung/aufgabe1.2.jpg" alt="Sinusschwingungen" width="700" height="600"></td>
             <figcaption>Bild 2</figcaption>
             <td><img src="./matlab/01-uebung/aufgabe1.2.2.jpg" alt="Sinusschwingungen" width="700" height="600"></td>
@@ -166,21 +179,21 @@
             </p>
             <pre>
                     <code>
-function FFTAnalize(signalVec, FS,framelengths)
+function FFTAnalize(name, signalVec, FS,framelengths)
 % Diese Funktion erhält einen Signalvector und wendet an ihm die FFT an mit
 % gegebenen Framelängen und stellt diese dar
-        countOfN = length(framelengths);
-        halfCountOfN = ceil(countOfN/2);
-
-        for index = 1:countOfN
-                N = framelengths(index);
-                [spec f] = calculateFFT(signalVec, FS, N);
-                subplot(halfCountOfN,2,index)
-                plot(f, abs(spec));
-                title(int2str(N/FS*1000) + " ms");
-                ylabel("Â(f)");
-                xlabel("f (Hz)");
-        end
+countOfN = length(framelengths);
+halfCountOfN = ceil(countOfN/2);
+disp(name);
+for index = 1:countOfN
+    N = framelengths(index);
+    [spec f] = calculateFFT(signalVec, FS, FS * N);
+    subplot(halfCountOfN,2,index)
+    plot(f, abs(spec));
+    title(int2str(N) + " ms");
+    ylabel("Â(f)");
+    xlabel("f (Hz)");
+end
 end
                     </code>
             </pre>
@@ -189,14 +202,15 @@ end
             </p>
             <pre><code>
 function [arrayFFTResults arrayFFTFrequenceVec] = calculateFFT(signalVec, FS, N)
-        % calculateFFT(signalVec, FS, N)
-        % Bestimmt die FFT und gibt das Ergebnis und die Frequenzachse zurück
-        %   Diese Funktion bestimmt die FFT mit dem gegebenen Wert N
-        %   Berechnet zusätzlich die Frequenzachse und gibt diese als zweiten
-        %   Parameter zurück.
-        arrayFFTResults = fft(signalVec, N);
-        delta_f = FS / N;
-        arrayFFTFrequenceVec = [0: delta_f : FS-delta_f];
+% calculateFFT(signalVec, FS, N)
+% Bestimmt die FFT und gibt das Ergebnis und die Frequenzachse zurück
+%   Diese Funktion bestimmt die FFT mit dem gegebenen Wert N
+%   Berechnet zusätzlich die Frequenzachse und gibt diese als zweiten
+%   Parameter zurück.
+arrayFFTResults = fft(signalVec, N);
+delta_f = FS / N;
+fprintf("Delta von f bei FS %d und N %d: %f\n", FS, N, delta_f);
+arrayFFTFrequenceVec = [0: delta_f : FS-delta_f];
 end
                 </code></pre>
             <p>
@@ -227,7 +241,6 @@ afl = 16; % Auflösung 16 Bit
 
 Ta = 1/f_a;
 t = 0:Ta:5-Ta; % Dauer 5 Sekunden
-tanz = 0:Ta:0.020 - Ta; % Anzeige x-Achse
 
 A_t1 = A1 * sin(2 * pi * f1 * t + phi1);
 A_t2 = A2 * sin(2 * pi * f2 * t + phi2);
@@ -241,30 +254,30 @@ A_ges = A_ges / maxWert;
 
 figure('Name',"Sinusschwingungen")
 subplot(2,1,1)
-plot(t, A_t1, t, A_t2, t,A_t3);
-axis([0 0.02 -2 2]);
+plot(t*1000, A_t1, t*1000, A_t2, t*1000,A_t3);
+axis([0 20 -2 2]);
 title("Sinusschwingungen");
 ylabel("A");
-xlabel("t");
+xlabel("t (ms)");
 
 subplot(2,1,2)
-plot(t, A_ges);
-axis([0 0.02 -2 2]);
+plot(t*1000, A_ges);
+axis([0 20 -2 2]);
 title("Addierte Sinusschwingungen");
 ylabel("A");
-xlabel("t");
+xlabel("t (ms)");
 
 % Fouriertransformation
-N_1 = f_a * 0.05;
-N_2 = f_a * 0.100;
-N_3 = f_a * 0.500;
-N_4 = f_a * 1;
-N_5 = f_a * 5;
+N_1 = 50;
+N_2 = 100;
+N_3 = 500;
+N_4 = 1000;
+N_5 = 5000;
 
 Nvec = [N_1 N_2 N_3 N_4 N_5];
 
 figure('Name',"Fouriertransformierte")
-FFTAnalize(A_ges, f_a, Nvec)
+FFTAnalize("Auswertung Sinusschwingung", A_ges, f_a, Nvec)
 
 audiowrite("aufgabe1_output.wav", A_ges, f_a, "BitsPerSample",afl);
 %Stefan----------------------------------------------------------------------
@@ -283,9 +296,9 @@ title("I-Sprachsignal");
 
 % Berechne und gebe Transformierte Signale aus
 figure('Name',"Sprache-Fouriertransformiert A")
-FFTAnalize(avec, aFS, Nvec(1:4));
+FFTAnalize("Auswertung A", avec, aFS, Nvec(1:4));
 figure('Name',"Sprache-Fouriertransformiert I")
-FFTAnalize(ivec, iFS, Nvec(1:4));
+FFTAnalize("Auswertung I", ivec, iFS, Nvec(1:4));
 
 %Marc----------------------------------------------------------------------
 [avec aFS] = audioread("../../wav/Marc_A.wav");
@@ -303,9 +316,9 @@ title("I-Sprachsignal");
 
 % Berechne und gebe Transformierte Signale aus
 figure('Name',"Sprache-Fouriertransformiert A")
-FFTAnalize(avec, aFS, Nvec(1:4));
+FFTAnalize("Auswertung A", avec, aFS, Nvec(1:4));
 figure('Name',"Sprache-Fouriertransformiert I")
-FFTAnalize(ivec, iFS, Nvec(1:4));
+FFTAnalize("Auswertung I", ivec, iFS, Nvec(1:4));
 
 %David----------------------------------------------------------------------
 [avec aFS] = audioread("../../wav/David_A.wav");
@@ -324,11 +337,11 @@ title("I-Sprachsignal");
 
 % Berechne und gebe Transformierte Signale aus
 figure('Name',"Sprache-Fouriertransformiert A")
-FFTAnalize(avec, aFS, Nvec(1:4));
+FFTAnalize("Auswertung A", avec, aFS, Nvec(1:4));
 figure('Name',"Sprache-Fouriertransformiert I")
-FFTAnalize(ivec, iFS, Nvec(1:4));
+FFTAnalize("Auswertung I", ivec, iFS, Nvec(1:4));
 figure('Name',"Sprache-Fouriertransformiert H")
-FFTAnalize(hvec, hFS, Nvec(1:4));
+FFTAnalize("Auswertung I", hvec, hFS, Nvec(1:4));
 
                 </code></pre>
         </section>
