--- a/ue2.html
+++ b/ue2.html
@@ -81,24 +81,24 @@
     </table>
     <table>
         <tr>
-            <th>Aufnahme David Eichhorn Autobahn</th>
-            <th>Synthese David Eichhorn Autobahn</th>
+            <th>Aufnahme Marc Ubbelohde</th>
+            <th>Synthese Marc Ubbelohde</th>
         </tr>
         <tr>
-            <th><audio controls><source src="./Uebung2/david/autobahn_david_orig.wav" type="audio/wav"></audio></th>
-            <th><audio controls><source src="./Uebung2/david/autobahn_david_syn.wav" type="audio/wav"></audio></th>
+            <th><audio controls><source src="./Uebung2/Marc/Marc_Astronaut.wav" type="audio/wav"></audio></th>
+            <th><audio controls><source src="./Uebung2/Marc/Marc_Astronaut_Syn.wav" type="audio/wav"></audio></th>
         </tr>
         <tr>
             <th>
-                <img src="./Uebung2/david/autobahn_david_orig.JPG" alt="autobahn_david_orig.JPG" width="350" height="300">
+                <img src="./Uebung2/Marc/Marc_Astronaut.png" alt="autobahn_david_orig.JPG" width="350" height="300">
             </th>
             <th>
-                <img src="./Uebung2/david/autobahn_david_syn.JPG" alt="autobahn_david_syn.JPG" width="350" height="300">
+                <img src="./Uebung2/Marc/Marc_Astronaut_Vergleich.png" alt="autobahn_david_syn.JPG" width="350" height="300">
             </th>
         </tr>
         <tr>
-                <th><a style="color:blue;" href="./Uebung2/david/autobahn_david.TextGrid">Transkriptionstabelle Autobahn</a></th>
-                <th><a style="color:blue;" href="./Uebung2/david/autobahn_david.pho">pho File Autobahn</a></th>
+                <th><a style="color:blue;" href="./Uebung2/Marc/Marc_Astronaut.TextGrid">Transkriptionstabelle Astronaut</a></th>
+                <th><a style="color:blue;" href="./Uebung2/Marc/Marc_Astronaut.pho">pho File Astronatu</a></th>
                 
         </tr>
     </table>
@@ -108,24 +108,24 @@
         </p>
         <table>
                 <tr>
-                    <th>Aufnahme David Eichhorn Es scheint einen Bug gegeben.</th>
-                    <th>Synthese David Eichhorn Es scheint einen Bug gegeben.</th>
+                    <th>Aufnahme Marc Ubbelohde Was ist ein Satz?</th>
+                    <th>Synthese Marc Ubbelohde Was ist ein Satz?</th>
                 </tr>
                 <tr>
-                    <th><audio controls><source src="./Uebung2/david/es scheint einen bug zu geben_orig.wav" type="audio/wav"></audio></th>
-                    <th><audio controls><source src="./Uebung2/david/es scheint einen bug zu geben_syn.wav" type="audio/wav"></audio></th>
+                    <th><audio controls><source src="./Uebung2/Marc/Marc_Satz.wav" type="audio/wav"></audio></th>
+                    <th><audio controls><source src="./Uebung2/Marc/Marc_Satz_Syn.wav" type="audio/wav"></audio></th>
                 </tr>
                 <tr>
                     <th>
-                        <img src="./Uebung2/david/es scheint einen bug zu geben_orig.JPG" alt="autobahn_david_orig.JPG" width="350" height="300">
+                        <img src="./Uebung2/Marc/Marc_Satz.png" alt="autobahn_david_orig.JPG" width="350" height="300">
                     </th>
                     <th>
-                        <img src="./Uebung2/david/es scheint einen bug zu geben_syn.JPG" alt="autobahn_david_syn.JPG" width="350" height="300">
+                        <img src="./Uebung2/Marc/Marc_Satz_Vergleich.png" alt="autobahn_david_syn.JPG" width="350" height="300">
                     </th>
                 </tr>
                 <tr>
-                        <th><a style="color:blue;" href="./Uebung2/david/es scheint einen bug zu geben.TextGrid">Transkriptionstabelle Autobahn</a></th>
-                        <th><a style="color:blue;" href="./Uebung2/david/es scheint einen bug zu geben_orig.pho">pho File Autobahn</a></th>
+                        <th><a style="color:blue;" href="./Uebung2/Marc/Marc_Satz.TextGrid">Transkriptionstabelle Was ist ein Satz?</a></th>
+                        <th><a style="color:blue;" href="./Uebung2/Marc/Marc_Satz.pho">pho File Was ist ein Satz?</a></th>
                         
                 </tr>
             </table>
