--- a/ue2.html
+++ b/ue2.html
@@ -119,10 +119,10 @@
         </tr>
         <tr>
             <th>
-                <img src="./Uebung2/david/es scheint einen bug zu geben_orig.JPG" alt="autobahn_david_orig.JPG" width="350" height="300">
+                <img src="./Uebung2/david/es scheint einen bug zu geben_orig.JPG" alt="es scheint einen bug zu geben_orig.JPG" width="350" height="300">
             </th>
             <th>
-                <img src="./Uebung2/david/es scheint einen bug zu geben_syn.JPG" alt="autobahn_david_syn.JPG" width="350" height="300">
+                <img src="./Uebung2/david/es scheint einen bug zu geben_syn.JPG" alt="es scheint einen bug zu geben_syn.JPG" width="350" height="300">
             </th>
         </tr>
         <tr>
