--- a/ue2.html
+++ b/ue2.html
@@ -9,13 +9,13 @@
             font-size: 10pt;
             text-decoration: none;
         }
-        
+
         a:visited {
             font-family: Arial;
             font-size: 10pt;
             text-decoration: none;
         }
-        
+
         a:hover {
             color: #FF3333;
             text-decoration: none;
@@ -35,8 +35,8 @@
     <h2>&Uuml;bung 2</h2>
     <table>
         <tr>
-            <th>Aufnahme David Eichhorn Autobahn</th>
-            <th>Synthese David Eichhorn Autobahn</th>
+            <th>Aufnahme David Eichhorn "Autobahn"</th>
+            <th>Synthese David Eichhorn "Autobahn"</th>
         </tr>
         <tr>
             <th><audio controls><source src="./Uebung2/david/autobahn_david_orig.wav" type="audio/wav"></audio></th>
@@ -58,8 +58,8 @@
     </table>
     <table>
         <tr>
-            <th>Aufnahme Stefan Jessel Besenstiel</th>
-            <th>Synthese Stefan Jessel Besenstiel</th>
+            <th>Aufnahme Stefan Jessel "Besenstiel"</th>
+            <th>Synthese Stefan Jessel "Besenstiel"</th>
         </tr>
         <tr>
             <th><audio controls><source src="./Uebung2/Stefan/Besenstiel.wav" type="audio/wav"></audio></th>
@@ -81,8 +81,8 @@
     </table>
     <table>
         <tr>
-            <th>Aufnahme Marc Ubbelohde</th>
-            <th>Synthese Marc Ubbelohde</th>
+            <th>Aufnahme Marc Ubbelohde "Astronaut"</th>
+            <th>Synthese Marc Ubbelohde "Astronaut"</th>
         </tr>
         <tr>
             <th><audio controls><source src="./Uebung2/Marc/Marc_Astronaut.wav" type="audio/wav"></audio></th>
@@ -110,8 +110,8 @@
 
     <table>
         <tr>
-            <th>Aufnahme David Eichhorn Es scheint einen Bug zu geben.</th>
-            <th>Synthese David Eichhorn Es scheint einen Bug zu geben.</th>
+            <th>Aufnahme David Eichhorn "Es scheint einen Bug zu geben."</th>
+            <th>Synthese David Eichhorn "Es scheint einen Bug zu geben."</th>
         </tr>
         <tr>
             <th><audio controls><source src="./Uebung2/david/es scheint einen bug zu geben_orig.wav" type="audio/wav"></audio></th>
@@ -134,8 +134,8 @@
 
     <table>
         <tr>
-            <th>Aufnahme Stefan Jessel Ich bin da.</th>
-            <th>Synthese Stefan Jessel Ich bin da.</th>
+            <th>Aufnahme Stefan Jessel "Ich bin da."</th>
+            <th>Synthese Stefan Jessel "Ich bin da."</th>
         </tr>
         <tr>
             <th><audio controls><source src="./Uebung2/Stefan/Ichbinda.wav" type="audio/wav"></audio></th>
@@ -157,8 +157,8 @@
     </table>
     <table>
         <tr>
-            <th>Aufnahme Marc Ubbelohde Was ist ein Satz?</th>
-            <th>Synthese Marc Ubbelohde Was ist ein Satz?</th>
+            <th>Aufnahme Marc Ubbelohde "Was ist ein Satz?"</th>
+            <th>Synthese Marc Ubbelohde "Was ist ein Satz?"</th>
         </tr>
         <tr>
             <th><audio controls><source src="./Uebung2/Marc/Marc_Satz.wav" type="audio/wav"></audio></th>
