Bildüberschriften hinzugefügt, Kopierfehler angepasst und Zusammenfassung angepasst

--- a/ue2.html
+++ b/ue2.html
@@ -39,8 +39,16 @@
             <th>Synthese David Eichhorn "Autobahn"</th>
         </tr>
         <tr>
+            <th>wave-Datei:</th>
+            <th>wave-Datei:</th>
+        </tr>
+        <tr>
             <th><audio controls><source src="./Uebung2/david/autobahn_david_orig.wav" type="audio/wav"></audio></th>
             <th><audio controls><source src="./Uebung2/david/autobahn_david_syn.wav" type="audio/wav"></audio></th>
+        </tr>
+        <tr>
+            <th>Wellenform, Spektrum, Pitch-Kontur und Transkription der Aufnahme in PRAAT:</th>
+            <th>Wellenform, Spektrum, Pitch-Kontur und Transkription der Synthese in PRAAT:</th>
         </tr>
         <tr>
             <th>
@@ -52,7 +60,7 @@
         </tr>
         <tr>
             <th><a style="color:blue;" href="./Uebung2/david/autobahn_david.TextGrid">Transkriptionstabelle Autobahn</a></th>
-            <th><a style="color:blue;" href="./Uebung2/david/autobahn_david.pho">pho File Autobahn</a></th>
+            <th><a style="color:blue;" href="./Uebung2/david/autobahn_david.pho">pho-File Autobahn</a></th>
 
         </tr>
     </table>
@@ -62,8 +70,16 @@
             <th>Synthese Stefan Jessel "Besenstiel"</th>
         </tr>
         <tr>
+            <th>wave-Datei:</th>
+            <th>wave-Datei:</th>
+        </tr>
+        <tr>
             <th><audio controls><source src="./Uebung2/Stefan/Besenstiel.wav" type="audio/wav"></audio></th>
             <th><audio controls><source src="./Uebung2/Stefan/SynBesenstiel.wav" type="audio/wav"></audio></th>
+        </tr>
+        <tr>
+            <th>Wellenform, Spektrum, Pitch-Kontur und Transkription der Aufnahme in PRAAT:</th>
+            <th>Wellenform, Spektrum, Pitch-Kontur und Transkription der Synthese in PRAAT:</th>
         </tr>
         <tr>
             <th>
@@ -75,7 +91,7 @@
         </tr>
         <tr>
             <th><a style="color:blue;" href="./Uebung2/Stefan/Besenstiel.TextGrid">Transkriptionstabelle Besenstiel</a></th>
-            <th><a style="color:blue;" href="./Uebung2/Stefan/stefanBesenstiel.pho">pho File Besenstiel</a></th>
+            <th><a style="color:blue;" href="./Uebung2/Stefan/stefanBesenstiel.pho">pho-File Besenstiel</a></th>
 
         </tr>
     </table>
@@ -85,27 +101,38 @@
             <th>Synthese Marc Ubbelohde "Astronaut"</th>
         </tr>
         <tr>
+            <th>wave-Datei:</th>
+            <th>wave-Datei:</th>
+        </tr>
+        <tr>
             <th><audio controls><source src="./Uebung2/Marc/Marc_Astronaut.wav" type="audio/wav"></audio></th>
             <th><audio controls><source src="./Uebung2/Marc/Marc_Astronaut_Syn.wav" type="audio/wav"></audio></th>
         </tr>
         <tr>
+            <th>Wellenform, Spektrum, Pitch-Kontur und Transkription der Aufnahme in PRAAT:</th>
+            <th>Vergleich von Wellenform, Spektrum und Pitch-Konturen in PRAAT:</th>
+        </tr>
+        <tr>
             <th>
-                <img src="./Uebung2/Marc/Marc_Astronaut.png" alt="autobahn_david_orig.JPG" width="350" height="300">
+                <img src="./Uebung2/Marc/Marc_Astronaut.png" width="350" height="300">
             </th>
             <th>
-                <img src="./Uebung2/Marc/Marc_Astronaut_Vergleich.png" alt="autobahn_david_syn.JPG" width="350" height="300">
+                <img src="./Uebung2/Marc/Marc_Astronaut_Vergleich.png" width="350" height="300">
             </th>
         </tr>
         <tr>
             <th><a style="color:blue;" href="./Uebung2/Marc/Marc_Astronaut.TextGrid">Transkriptionstabelle Astronaut</a></th>
-            <th><a style="color:blue;" href="./Uebung2/Marc/Marc_Astronaut.pho">pho File Astronaut</a></th>
+            <th><a style="color:blue;" href="./Uebung2/Marc/Marc_Astronaut.pho">pho-File Astronaut</a></th>
 
         </tr>
     </table>
-    <p>Man kann alle Synthetisierten Wörter gut erkennen. Die Synthese klingt eher mechanischer, während das Original flüssiger klingt. Die Ausschläge bei der synthetischen Variante sind allerdings leicht anders. Die Grundfrequenz stimmen auch nicht hundertprozentig
-        überein, was daran liegen kann dass zum modellieren nicht genügend Stützstellen für die Grundfrequenz eingegeben wurden. Des weiteren zusätzlich noch daran, dass eine der Datenbank eine andere Grundfrequenz beim einsprechen verfolgte. Auch die
-        Übergänge zwischen den Phone beim aussprechen leicht vermischen, was MBrola nicht direkt mit einpflegt. Im Spektrum erkennt man dann noch, dass die genutzten Frequenzen leichte Differenzen aufweisen. Es ist schwer die genauen Grenzen zwischen
-        den einzelnen Phonen genau zu erkennen, weswegen auch hier eine Differenz zwischen den beiden Ausgaben existieren. Dennoch werden die Grundfrequenzen und Dauern der Laute gut abgebildet.
+    <p>Man kann alle Synthetisierten Wörter gut erkennen. Wie erwartet klingt die synthetisierte Sprache eher mechanisch, während das Original einen
+      natürlicheren, flüssigeren Klang hat. Die Ausschläge der synthetischen generierten Sprache und der Aufnahem weisen teilweise große Unterschiede auf.
+      Dies liegt daran, das unsere Stimme nicht allein über Phoneme und eine Grundfrequenz charakterisiert werden kann, sondern die Tonentstehung von der
+      individuellen Anatomie des Kehlkopfes abhängt. Es ist deshalbt zu viel von Mbrola erwartet die Töne 1 zu 1 nachbilden zu können.
+      Die Grundfrequenz stimmen trotz korrekter Angabe auch nicht immer überein, was daran liegt dass zum modellieren nicht genügend Stützstellen für
+      die Grundfrequenz eingegeben wurden. Es ist trotz dieser relativen simplen synthetisierung erstaunlich wie ähnlich die synthetisierte Sprach an die Aufnahme
+      herankommt.
     </p>
 
     <table>
@@ -114,8 +141,16 @@
             <th>Synthese David Eichhorn "Es scheint einen Bug zu geben."</th>
         </tr>
         <tr>
+            <th>wave-Datei:</th>
+            <th>wave-Datei:</th>
+        </tr>
+        <tr>
             <th><audio controls><source src="./Uebung2/david/es scheint einen bug zu geben_orig.wav" type="audio/wav"></audio></th>
             <th><audio controls><source src="./Uebung2/david/es scheint einen bug zu geben_syn.wav" type="audio/wav"></audio></th>
+        </tr>
+        <tr>
+            <th>Wellenform, Spektrum, Pitch-Kontur und Transkription der Aufnahme in PRAAT:</th>
+            <th>Wellenform, Spektrum, Pitch-Kontur und Transkription der Synthese in PRAAT:</th>
         </tr>
         <tr>
             <th>
@@ -127,7 +162,7 @@
         </tr>
         <tr>
             <th><a style="color:blue;" href="./Uebung2/david/es scheint einen bug zu geben.TextGrid">Transkriptionstabelle Es scheint einen Bug zu geben.</a></th>
-            <th><a style="color:blue;" href="./Uebung2/david/es scheint einen bug zu geben.pho">pho File Es scheint einen Bug zu geben.</a></th>
+            <th><a style="color:blue;" href="./Uebung2/david/es scheint einen bug zu geben.pho">pho-File Es scheint einen Bug zu geben.</a></th>
 
         </tr>
     </table>
@@ -138,20 +173,28 @@
             <th>Synthese Stefan Jessel "Ich bin da."</th>
         </tr>
         <tr>
+            <th>wave-Datei:</th>
+            <th>wave-Datei:</th>
+        </tr>
+        <tr>
             <th><audio controls><source src="./Uebung2/Stefan/Ichbinda.wav" type="audio/wav"></audio></th>
             <th><audio controls><source src="./Uebung2/Stefan/ichbindasyn.wav" type="audio/wav"></audio></th>
         </tr>
         <tr>
+            <th>Wellenform, Spektrum, Pitch-Kontur und Transkription der Aufnahme in PRAAT:</th>
+            <th>Wellenform, Spektrum, Pitch-Kontur und Transkription der Synthese in PRAAT:</th>
+        </tr>
+        <tr>
             <th>
-                <img src="./Uebung2/Stefan/Ichbinda.JPG" alt="autobahn_david_orig.JPG" width="350" height="300">
+                <img src="./Uebung2/Stefan/Ichbinda.JPG" width="350" height="300">
             </th>
             <th>
-                <img src="./Uebung2/Stefan/SynIchbinDa.JPG" alt="autobahn_david_syn.JPG" width="350" height="300">
+                <img src="./Uebung2/Stefan/SynIchbinDa.JPG" width="350" height="300">
             </th>
         </tr>
         <tr>
-            <th><a style="color:blue;" href="./Uebung2/Stefan/Ichbinda.TextGrid">Transkriptionstabelle Was ist ein Satz?</a></th>
-            <th><a style="color:blue;" href="./Uebung2/Stefan/ichbinda.pho">pho File Was ist ein Satz?</a></th>
+            <th><a style="color:blue;" href="./Uebung2/Stefan/Ichbinda.TextGrid">Transkriptionstabelle Ich bin da.</a></th>
+            <th><a style="color:blue;" href="./Uebung2/Stefan/ichbinda.pho">pho-File Ich bin da.</a></th>
 
         </tr>
     </table>
@@ -161,25 +204,33 @@
             <th>Synthese Marc Ubbelohde "Was ist ein Satz?"</th>
         </tr>
         <tr>
+            <th>wave-Datei:</th>
+            <th>wave-Datei:</th>
+        </tr>
+        <tr>
             <th><audio controls><source src="./Uebung2/Marc/Marc_Satz.wav" type="audio/wav"></audio></th>
             <th><audio controls><source src="./Uebung2/Marc/Marc_Satz_Syn.wav" type="audio/wav"></audio></th>
         </tr>
         <tr>
+            <th>Wellenform, Spektrum, Pitch-Kontur und Transkription der Aufnahme in PRAAT:</th>
+            <th>Vergleich von Wellenform, Spektrum und Pitch-Konturen in PRAAT:</th>
+        </tr>
+        <tr>
             <th>
-                <img src="./Uebung2/Marc/Marc_Satz.png" alt="autobahn_david_orig.JPG" width="350" height="300">
+                <img src="./Uebung2/Marc/Marc_Satz.png" width="350" height="300">
             </th>
             <th>
-                <img src="./Uebung2/Marc/Marc_Satz_Vergleich.png" alt="autobahn_david_syn.JPG" width="350" height="300">
+                <img src="./Uebung2/Marc/Marc_Satz_Vergleich.png" width="350" height="300">
             </th>
         </tr>
         <tr>
             <th><a style="color:blue;" href="./Uebung2/Marc/Marc_Satz.TextGrid">Transkriptionstabelle Was ist ein Satz?</a></th>
-            <th><a style="color:blue;" href="./Uebung2/Marc/Marc_Satz.pho">pho File Was ist ein Satz?</a></th>
+            <th><a style="color:blue;" href="./Uebung2/Marc/Marc_Satz.pho">pho-File Was ist ein Satz?</a></th>
 
         </tr>
     </table>
     <p>
-        Bei den Sätzen wurden weniger Stützstellen für die Grundfrequenzen genutzt, weswegen die Ausgaben noch mechanischer wirken. Auch die Ausgabe in PRAAT zeigt dementsprechend mehr Abweichung zwischen Orignal und Synthese.
+        Bei den Sätzen wurden weniger Stützstellen für die Grundfrequenzen genutzt, weswegen die Ausgaben noch mechanischer wirken. Auch die Abbildung in PRAAT zeigt dementsprechend mehr Abweichung zwischen Orignal und Synthese.
     </p>
 </body>
 
