Abtrenner und Überschriften hinzugefügt

--- a/ue2.html
+++ b/ue2.html
@@ -64,6 +64,7 @@
 
         </tr>
     </table>
+    <hr>
     <table>
         <tr>
             <th>Aufnahme Stefan Jessel "Besenstiel"</th>
@@ -95,6 +96,7 @@
 
         </tr>
     </table>
+    <hr>
     <table>
         <tr>
             <th>Aufnahme Marc Ubbelohde "Astronaut"</th>
@@ -126,6 +128,7 @@
 
         </tr>
     </table>
+    <h3>Auswertung Wörter</h3>
     <p>Man kann alle Synthetisierten Wörter gut erkennen. Wie erwartet klingt die synthetisierte Sprache eher mechanisch, während das Original einen
       natürlicheren, flüssigeren Klang hat. Die Ausschläge der synthetischen generierten Sprache und der Aufnahem weisen teilweise große Unterschiede auf.
       Dies liegt daran, das unsere Stimme nicht allein über Phoneme und eine Grundfrequenz charakterisiert werden kann, sondern die Tonentstehung von der
@@ -135,6 +138,8 @@
       herankommt.
     </p>
 
+    <hr>
+    <hr>
     <table>
         <tr>
             <th>Aufnahme David Eichhorn "Es scheint einen Bug zu geben."</th>
@@ -166,7 +171,7 @@
 
         </tr>
     </table>
-
+    <hr>
     <table>
         <tr>
             <th>Aufnahme Stefan Jessel "Ich bin da."</th>
@@ -198,6 +203,7 @@
 
         </tr>
     </table>
+    <hr>
     <table>
         <tr>
             <th>Aufnahme Marc Ubbelohde "Was ist ein Satz?"</th>
@@ -229,6 +235,7 @@
 
         </tr>
     </table>
+    <h3>Auswertung Sätze</h3>
     <p>
         Bei den Sätzen wurden weniger Stützstellen für die Grundfrequenzen genutzt, weswegen die Ausgaben noch mechanischer wirken. Auch die Abbildung in PRAAT zeigt dementsprechend mehr Abweichung zwischen Orignal und Synthese.
     </p>
