--- a/ue2.html
+++ b/ue2.html
@@ -132,7 +132,7 @@
     <p>Man kann alle Synthetisierten Wörter gut erkennen. Wie erwartet klingt die synthetisierte Sprache eher mechanisch, während das Original einen
       natürlicheren, flüssigeren Klang hat. Die Ausschläge der synthetischen generierten Sprache und der Aufnahem weisen teilweise große Unterschiede auf.
       Dies liegt daran, das unsere Stimme nicht allein über Phoneme und eine Grundfrequenz charakterisiert werden kann, sondern die Tonentstehung von der
-      individuellen Anatomie des Kehlkopfes abhängt. Es ist deshalbt zu viel von Mbrola erwartet die Töne 1 zu 1 nachbilden zu können.
+      individuellen Anatomie des Kehlkopfes abhängt. Es ist deshalb zu viel von Mbrola erwartet die Töne 1 zu 1 nachbilden zu können.
       Die Grundfrequenz stimmen trotz korrekter Angabe auch nicht immer überein, was daran liegt dass zum modellieren nicht genügend Stützstellen für
       die Grundfrequenz eingegeben wurden. Es ist trotz dieser relativen simplen synthetisierung erstaunlich wie ähnlich die synthetisierte Sprach an die Aufnahme
       herankommt.
