renamed stefan image path

--- a/ue3.html
+++ b/ue3.html
@@ -99,7 +99,7 @@
                     <tr>
                             <th><img src="./Uebung3/david/CVC_David.JPG" width="350" height="300"></th>
                             <th><img src="./Uebung3/marc/CVC_Marc.png" width="350" height="300"></th>
-                            <th><img src="./Uebung3/stefan/CVC_Stefan.png" width="350" height="300"></th>
+                            <th><img src="./Uebung3/stefan/CVC_Stefan.JPG" width="350" height="300"></th>
                     </tr>
                     <tr>
                         <th><a style="color:blue;" href="./Uebung3/david/CVC_David.TextGrid">Transkriptionstabelle CVC David</a></th>
@@ -121,7 +121,7 @@
                 <tr>
                         <th><img src="./Uebung3/david/VCV_David.JPG" width="350" height="300"></th>
                         <th><img src="./Uebung3/marc/VCV_Marc.png" width="350" height="300"></th>
-                        <th><img src="./Uebung3/stefan/VCV_Stefan.png" width="350" height="300"></th>
+                        <th><img src="./Uebung3/stefan/VCV_Stefan.JPG" width="350" height="300"></th>
                 </tr>
                 <tr>
                     <th><a style="color:blue;" href="./Uebung3/david/VCV_David.TextGrid">Transkriptionstabelle VCV David</a></th>
