--- a/ue3.html
+++ b/ue3.html
@@ -9,13 +9,13 @@
             font-size: 10pt;
             text-decoration: none;
         }
-        
+
         a:visited {
             font-family: Arial;
             font-size: 10pt;
             text-decoration: none;
         }
-        
+
         a:hover {
             color: #FF3333;
             text-decoration: none;
@@ -73,7 +73,19 @@
             <h3>Aufgabe 3.2</h3>
         </header>
         <section>
-            <p></p>
+            <p>Wie unterscheiden sich die Vokale/Konsonanten im Oszillogramm und im Spektrum?
+
+
+              In welchen Frequenzbereich befindet sich die meiste Energie?
+
+
+              Welche Artikulationsart/ort bezeichnet die gewählten Konsonanten? (Übergänge betrachten)
+
+
+              Wie unterscheiden sich die gewählten Vokale? (Zungenposition, Länge, Lippenrundung +/-)
+
+
+              Vergleich von Oszillo/Spektrogramm verschiedener Sprecher. (Ähnlich?)</p>
             <table>
                 <tr>
                     <th>David CVC</th>
